--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "vanilla-app-template",
   "private": true,
   "version": "1.0.0",
+  "homepage": "https://oleksandrt434.github.io/goit-js-hw-09",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --base=/goit-js-hw-09/",
-    "preview": "vite preview"
+     "dev": "vite",
+     "build": "vite build",
+     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "glob": "^11.0.0",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
