--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
      "dev": "vite",
-     "build": "vite build",
+     "build": "vite build --base=/goit-js-hw-09/",
      "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
